--- a/pom.xml
+++ b/pom.xml
@@ -71,7 +71,19 @@
 			<groupId>io.kubernetes</groupId>
 			<artifactId>client-java</artifactId>
 			<version>24.0.0</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.apache.commons</groupId>
+                    <artifactId>commons-lang3</artifactId>
+                </exclusion>
+            </exclusions>
 		</dependency>
+        <!-- Adding Commons Langs 3 seperate, as Kubernetes Client uses a vulnerable version -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.18.0</version>
+        </dependency>
 		<dependency>
 			<groupId>io.kubernetes</groupId>
 			<artifactId>client-java-extended</artifactId>
